feat: implements memory and observation