@@ -4,6 +4,8 @@ import com.marcelogm.istarimcp.IntegrationTest;
 import com.marcelogm.istarimcp.api.ContextResponse;
 import com.marcelogm.istarimcp.api.memory.CreateMemoryRequest;
 import com.marcelogm.istarimcp.api.memory.CreateMemoryResponse;
+import com.marcelogm.istarimcp.api.memory.UpdateMemoryRequest;
+import com.marcelogm.istarimcp.api.memory.UpdateMemoryResponse;
 import io.micronaut.core.type.Argument;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.client.HttpClient;
@@ -12,11 +14,11 @@ import jakarta.inject.Inject;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.List;
 
 import static com.marcelogm.istarimcp.helper.MemoryDatabaseAssertions.*;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 
 class MemoryControllerIT extends IntegrationTest {
 
@@ -43,6 +45,8 @@ class MemoryControllerIT extends IntegrationTest {
 
         // then
         assertNotNull(response);
+        assertEquals("Memory created.", response.context());
+
         final var memory = (CreateMemoryResponse) response.data();
         assertNotNull(memory);
         assertNotNull(memory.id());
@@ -60,7 +64,7 @@ class MemoryControllerIT extends IntegrationTest {
         final var request = new CreateMemoryRequest(
                 "Empty Memory",
                 "Memory without observations",
-                List.of()
+                Collections.emptyList()
         );
 
         // when
@@ -72,6 +76,8 @@ class MemoryControllerIT extends IntegrationTest {
 
         // then
         assertNotNull(response);
+        assertEquals("Memory created.", response.context());
+
         final var memory = (CreateMemoryResponse) response.data();
         assertNotNull(memory);
         assertNotNull(memory.id());
@@ -80,5 +86,106 @@ class MemoryControllerIT extends IntegrationTest {
 
         assertMemoryInDatabase(driver, memory);
         assertNoObservations(driver, memory.id());
+    }
+
+    @Test
+    @DisplayName("should delete memory by name")
+    void shouldDeleteMemoryByName() {
+        // given
+        final var createRequest = new CreateMemoryRequest(
+                "Memory To Delete",
+                "This memory will be deleted",
+                List.of("observation1", "observation2")
+        );
+
+        final var createResponse = httpClient.toBlocking().retrieve(
+                HttpRequest.POST("/memories", createRequest),
+                Argument.of(ContextResponse.class, CreateMemoryResponse.class)
+        );
+
+        final var memory = (CreateMemoryResponse) createResponse.data();
+        assertMemoryInDatabase(driver, memory);
+
+        // when
+        final var deleteRequest = HttpRequest.DELETE("/memories").uri(uri ->
+                uri.queryParam("name", "Memory To Delete")
+        );
+        final var response = httpClient.toBlocking().retrieve(
+                deleteRequest,
+                Argument.of(ContextResponse.class, String.class)
+        );
+
+        // then
+        assertNotNull(response);
+        assertEquals("Memory deleted.", response.context());
+        assertNull(response.data());
+
+        assertMemoryNotInDatabase(driver, memory.id());
+    }
+
+    @Test
+    @DisplayName("should return not found when deleting non-existent memory")
+    void shouldReturnNotFoundWhenDeletingNonExistentMemory() {
+        // when
+        final var deleteRequest = HttpRequest.DELETE("/memories").uri(uri ->
+                uri.queryParam("name", "Non Existent Memory")
+        );
+        final var response = httpClient.toBlocking().retrieve(
+                deleteRequest,
+                Argument.of(ContextResponse.class, String.class)
+        );
+
+        // then
+        assertNotNull(response);
+        assertEquals("Memory not found.", response.context());
+        assertNull(response.data());
+    }
+
+    @Test
+    @DisplayName("should update memory description")
+    void shouldUpdateMemoryDescription() {
+        // given
+        final var createRequest = new CreateMemoryRequest(
+                "Update Test Memory",
+                "Original Description",
+                Collections.emptyList()
+        );
+
+
+        httpClient.toBlocking().retrieve(
+                HttpRequest.POST("/memories", createRequest),
+                Argument.of(ContextResponse.class, CreateMemoryResponse.class)
+        );
+
+        final var updateRequest = new UpdateMemoryRequest(
+                "Update Test Memory",
+                "Updated Description"
+        );
+
+        // when
+        final var httpRequest = HttpRequest.PUT("/memories", updateRequest);
+        final var response = httpClient.toBlocking().retrieve(
+                httpRequest,
+                Argument.of(ContextResponse.class, UpdateMemoryResponse.class)
+        );
+
+        // then
+        assertNotNull(response);
+        assertEquals("Memory updated.", response.context());
+
+        final var memory = (UpdateMemoryResponse) response.data();
+        assertNotNull(memory);
+        assertNotNull(memory.id());
+        assertEquals("Update Test Memory", memory.name());
+        assertEquals("Updated Description", memory.description());
+
+        final var records = driver.executableQuery(
+                        "MATCH (m:Memory {name: $name}) RETURN m.description as description"
+                )
+                .withParameters(java.util.Map.of("name", "Update Test Memory"))
+                .execute()
+                .records();
+
+        assertEquals("Updated Description", records.get(0).get("description").asString());
     }
 }
